# COMP3850_PACE

./: LICENSE  README.md  analyze_metrics.py  app.py  appOld.py  convert.py  csvjson.csv  interim_results_10.json  interim_results_100.json  interim_results_110.json  interim_results_120.json  interim_results_130.json  interim_results_140.json  interim_results_150.json  interim_results_160.json  interim_results_170.json  interim_results_180.json  interim_results_190.json  interim_results_20.json  interim_results_200.json  interim_results_210.json  interim_results_220.json  interim_results_230.json  interim_results_240.json  interim_results_250.json  interim_results_260.json  interim_results_270.json  interim_results_280.json  interim_results_290.json  interim_results_30.json  interim_results_300.json  interim_results_310.json  interim_results_320.json  interim_results_330.json  interim_results_340.json  interim_results_350.json  interim_results_360.json  interim_results_370.json  interim_results_380.json  interim_results_390.json  (+34 more)
.streamlit/: secrets.toml
src/: app.py
src/config/: settings.py
src/models/: model_loader.py
src/utils/: metrics.py  text_analysis.py  verification.py
