[tool.poetry]
name = "COMP3850"
version = "0.1.0"
description = ""
authors = ["JackPayne123 <jacktpayne51@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sentence-transformers = "^3.0.1"
openai = "^1.40.6"
anthropic = "^0.34.0"
nltk = "^3.8.2"
bert-score = "^0.3.13"
scikit-learn = "^1.5.1"
ollama = "^0.3.1"
google-generativeai = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
