[tool.poetry]
name = "comp3850"
version = "0.1.0"
description = ""
authors = ["JackPayne123 <jacktpayne51@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sentence-transformers = "^3.0.1"
openai = "^1.40.6"
anthropic = "^0.34.0"
nltk = "3.7"
bert-score = "^0.3.13"
scikit-learn = "^1.5.1"
ollama = "^0.3.1"
google-generativeai = "^0.7.2"
streamlit = "^1.32.0"
rouge-score = {url = "https://files.pythonhosted.org/packages/1f/56/a81022436c08b9405a5247b71635394d44fe7e1dbedc4b28c740e09c2840/rouge_score-0.0.4-py2.py3-none-any.whl"}
mistral = "^19.0.0"
mistralai = "^1.1.0"
watchdog = "^5.0.3"
seaborn = "^0.13.2"
datasets = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"